spacing fix

--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-/*  TODOs:
-    Contact section background
-    sbtv img
-*/
-
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&family=Ubuntu&display=swap');
 
 :root {
@@ -371,8 +366,8 @@ nav li.active {
 	max-width: 80%;
 	margin: auto;
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-	grid-auto-rows: minmax(470px, 1fr);
+	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+	grid-auto-rows: minmax(475px, 1fr);
 	border-radius: 15px;
 	box-shadow: var(--box-shadow2);
 	overflow: hidden;
@@ -453,6 +448,12 @@ nav li.active {
 	border-radius: 15px;
 	box-shadow: var(--box-shadow2);
 	padding: 2rem;
+}
+
+@media (max-width: 600px) {
+	.form-container {
+		padding: 2rem 0.8rem;
+	}
 }
 
 .form-field {
